--- a/cursos/Paginas-Bootstrap/index.html
+++ b/cursos/Paginas-Bootstrap/index.html
@@ -17,16 +17,56 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quem somos</a>
+                        <a class="nav-link" href="#quemsomos">Quem somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Parceiros</a>
+                        <a class="nav-link" href="#parceiros">Parceiros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Serviços</a>
+                        <a class="nav-link" href="#servicos">Serviços</a>
                     </li>
                 </ul>
             </div>
         </nav>
+        <section id="quemsomos">
+            <div class="container-fluid quem-somos text-center margin">
+                <h3>Quem somos</h3>
+                <img src="img/time.jpeg" class="rounded-circle" width="400" height="400">    
+                <h3>Somos um time comprometido com os resultados</h3>
+            </div>
+        </section>
+        <section id="parceiros">
+            <div class="container-fluid text-center margin parceiros">
+                <h3>PARCEIROS</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <img src="img/digital_innovation.jpeg" width:"100%">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/digital_innovation.jpeg" width:"100%">
+                        </div>
+                        <div class="col-md-4">
+                            <img src="img/digital_innovation.jpeg" width:"100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="servicos">
+            <div class="container-fluid text-center margin servicos">
+                <h3>Serviços</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <img src="img/app.jpeg" width="100%">
+                        </div>
+                        <div class="col-lg-6">
+                            <img src="img/app.jpeg" width="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
